@@ -12,16 +12,10 @@ import static io.harness.data.structure.EmptyPredicate.isNotEmpty;
 import static io.harness.exception.WingsException.USER;
 import static io.harness.filesystem.FileIo.getHomeDir;
 import static io.harness.govern.Switch.noop;
-import static io.harness.k8s.KubernetesConvention.DASH;
 import static io.harness.network.Http.joinHostPort;
 
 import static com.fasterxml.jackson.annotation.JsonInclude.Include.NON_EMPTY;
 import static com.fasterxml.jackson.dataformat.yaml.YAMLGenerator.Feature.WRITE_DOC_START_MARKER;
-import static io.fabric8.kubernetes.client.Config.KUBERNETES_KUBECONFIG_FILE;
-import static io.fabric8.kubernetes.client.Config.KUBERNETES_SERVICE_ACCOUNT_CA_CRT_PATH;
-import static io.fabric8.kubernetes.client.Config.KUBERNETES_SERVICE_ACCOUNT_TOKEN_PATH;
-import static io.fabric8.kubernetes.client.utils.Utils.isNotNullOrEmpty;
-import static java.lang.String.format;
 import static java.util.Arrays.asList;
 import static okhttp3.ConnectionSpec.CLEARTEXT;
 import static org.apache.commons.lang3.StringUtils.isBlank;
@@ -39,7 +33,6 @@ import io.harness.k8s.model.KubernetesClusterAuthType;
 import io.harness.k8s.model.KubernetesConfig;
 import io.harness.k8s.model.KubernetesConfig.KubernetesConfigBuilder;
 import io.harness.k8s.oidc.OidcTokenRetriever;
-import io.harness.logging.LogCallback;
 import io.harness.network.Http;
 import io.harness.network.NoopHostnameVerifier;
 import io.harness.yaml.YamlRepresenter;
@@ -48,16 +41,12 @@ import io.harness.yaml.YamlUtils;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
+import com.google.common.annotations.VisibleForTesting;
 import com.google.inject.Inject;
 import com.google.inject.Singleton;
-import io.fabric8.istio.api.networking.v1alpha3.HTTPRouteDestination;
-import io.fabric8.istio.api.networking.v1alpha3.VirtualService;
-import io.fabric8.istio.api.networking.v1alpha3.VirtualServiceSpec;
 import io.fabric8.istio.client.DefaultIstioClient;
 import io.fabric8.istio.client.IstioClient;
 import io.fabric8.kubernetes.api.model.NamespaceBuilder;
-import io.fabric8.kubernetes.api.model.autoscaling.v1.HorizontalPodAutoscaler;
-import io.fabric8.kubernetes.api.model.autoscaling.v1.HorizontalPodAutoscalerList;
 import io.fabric8.kubernetes.client.Config;
 import io.fabric8.kubernetes.client.ConfigBuilder;
 import io.fabric8.kubernetes.client.KubernetesClient;
@@ -68,12 +57,17 @@ import io.fabric8.kubernetes.client.dsl.MixedOperation;
 import io.fabric8.kubernetes.client.dsl.NonNamespaceOperation;
 import io.fabric8.kubernetes.client.dsl.Resource;
 import io.fabric8.kubernetes.client.internal.SSLUtils;
-import io.fabric8.kubernetes.client.utils.Utils;
 import io.fabric8.openshift.client.NamespacedOpenShiftClient;
 import io.fabric8.openshift.client.OpenShiftClient;
 import io.kubernetes.client.openapi.ApiClient;
+import io.kubernetes.client.util.KubeConfig;
+import java.io.BufferedReader;
+import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.io.StringReader;
 import java.net.InetSocketAddress;
 import java.net.MalformedURLException;
 import java.net.Proxy;
@@ -81,15 +75,16 @@ import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.security.KeyManagementException;
 import java.security.KeyStoreException;
 import java.security.NoSuchAlgorithmException;
 import java.security.UnrecoverableKeyException;
 import java.security.cert.CertificateException;
 import java.security.spec.InvalidKeySpecException;
+import java.util.Base64;
 import java.util.Collections;
-import java.util.Comparator;
-import java.util.List;
+import java.util.Locale;
 import java.util.concurrent.TimeUnit;
 import javax.net.ssl.KeyManager;
 import javax.net.ssl.SSLContext;
@@ -118,7 +113,7 @@ import org.yaml.snakeyaml.constructor.SafeConstructor;
 @OwnedBy(HarnessTeam.CDP)
 public class KubernetesHelperService {
   static {
-    System.setProperty("kubernetes.backwardsCompatibilityInterceptor.disable", "false");
+    System.setProperty(KubeConfigConstants.KUBERNETES_BACKWARD_COMPATIBILITY_INTERCEPTOR_DISABLE, "false");
   }
   @Inject private OidcTokenRetriever oidcTokenRetriever;
 
@@ -273,22 +268,6 @@ public class KubernetesHelperService {
     return "default";
   }
 
-  public static void printVirtualServiceRouteWeights(
-      VirtualService virtualService, String controllerPrefix, LogCallback logCallback) {
-    VirtualServiceSpec virtualServiceSpec = virtualService.getSpec();
-    if (isNotEmpty(virtualServiceSpec.getHttp().get(0).getRoute())) {
-      List<HTTPRouteDestination> sorted = virtualServiceSpec.getHttp().get(0).getRoute();
-      sorted.sort(Comparator.comparing(a -> Integer.valueOf(a.getDestination().getSubset())));
-      for (HTTPRouteDestination destinationWeight : sorted) {
-        int weight = destinationWeight.getWeight();
-        String rev = destinationWeight.getDestination().getSubset();
-        logCallback.saveExecutionLog(format("   %s%s%s: %d%%", controllerPrefix, DASH, rev, weight));
-      }
-    } else {
-      logCallback.saveExecutionLog("   None specified");
-    }
-  }
-
   private boolean shouldDisableHttp2() {
     return System.getProperty("java.version", "").startsWith("1.8");
   }
@@ -336,14 +315,14 @@ public class KubernetesHelperService {
 
       httpClientBuilder.addInterceptor(chain -> {
         Request request = chain.request();
-        if (isNotNullOrEmpty(config.getUsername()) && isNotNullOrEmpty(config.getPassword())) {
+        if (isNotEmpty(config.getUsername()) && isNotEmpty(config.getPassword())) {
           Request authReq =
               chain.request()
                   .newBuilder()
                   .addHeader("Authorization", Credentials.basic(config.getUsername(), config.getPassword()))
                   .build();
           return chain.proceed(authReq);
-        } else if (isNotNullOrEmpty(config.getOauthToken())) {
+        } else if (isNotEmpty(config.getOauthToken())) {
           Request authReq =
               chain.request().newBuilder().addHeader("Authorization", "Bearer " + config.getOauthToken()).build();
           return chain.proceed(authReq);
@@ -477,15 +456,6 @@ public class KubernetesHelperService {
     return mixedOperation.inNamespace(kubernetesConfig.getNamespace());
   }
 
-  public NonNamespaceOperation<HorizontalPodAutoscaler, HorizontalPodAutoscalerList, Resource<HorizontalPodAutoscaler>>
-  hpaOperations(KubernetesConfig kubernetesConfig) {
-    return getKubernetesClient(kubernetesConfig)
-        .autoscaling()
-        .v1()
-        .horizontalPodAutoscalers()
-        .inNamespace(kubernetesConfig.getNamespace());
-  }
-
   /**
    * Separates apiVersion for apiGroup/apiVersion combination.
    * @param apiVersion  The apiVersion or apiGroup/apiVersion combo.
@@ -503,19 +473,19 @@ public class KubernetesHelperService {
   public static KubernetesConfig getKubernetesConfigFromServiceAccount(String namespace) {
     KubernetesConfigBuilder kubernetesConfigBuilder = KubernetesConfig.builder().namespace(namespace);
 
-    String masterHost = Utils.getSystemPropertyOrEnvVar("KUBERNETES_SERVICE_HOST", (String) null);
-    String masterPort = Utils.getSystemPropertyOrEnvVar("KUBERNETES_SERVICE_PORT", (String) null);
+    String masterHost = getSystemPropertyOrEnvVar(KubeConfigConstants.KUBERNETES_SERVICE_HOST_PROPERTY, null);
+    String masterPort = getSystemPropertyOrEnvVar(KubeConfigConstants.KUBERNETES_SERVICE_PORT_PROPERTY, null);
     if (masterHost != null && masterPort != null) {
       String hostPort = joinHostPort(masterHost, masterPort);
       kubernetesConfigBuilder.masterUrl("https://" + hostPort);
     }
 
-    String caCert = getFileContent(KUBERNETES_SERVICE_ACCOUNT_CA_CRT_PATH);
+    String caCert = getFileContent(KubeConfigConstants.KUBERNETES_SERVICE_ACCOUNT_CA_CRT_PATH);
     if (isNotBlank(caCert)) {
       kubernetesConfigBuilder.caCert(caCert.toCharArray());
     }
 
-    String serviceAccountToken = getFileContent(KUBERNETES_SERVICE_ACCOUNT_TOKEN_PATH);
+    String serviceAccountToken = getFileContent(KubeConfigConstants.KUBERNETES_SERVICE_ACCOUNT_TOKEN_PATH);
     if (isNotBlank(serviceAccountToken)) {
       kubernetesConfigBuilder.serviceAccountTokenSupplier(() -> serviceAccountToken);
     }
@@ -526,26 +496,25 @@ public class KubernetesHelperService {
   public static KubernetesConfig getKubernetesConfigFromDefaultKubeConfigFile(String namespace) {
     KubernetesConfigBuilder kubernetesConfigBuilder = KubernetesConfig.builder().namespace(namespace);
 
-    File kubeConfigFile = new File(Utils.getSystemPropertyOrEnvVar(
-        KUBERNETES_KUBECONFIG_FILE, new File(getHomeDir(), ".kube" + File.separator + "config").toString()));
+    File kubeConfigFile = new File(getSystemPropertyOrEnvVar(KubeConfigConstants.KUBERNETES_KUBECONFIG_FILE,
+        new File(getHomeDir(), ".kube" + File.separator + "config").toString()));
     boolean kubeConfigFileExists = Files.isRegularFile(kubeConfigFile.toPath());
 
     if (kubeConfigFileExists) {
-      String kubeconfigContents;
       try {
         Path kubeConfigPath = kubeConfigFile.toPath();
-        kubeconfigContents = new String(Files.readAllBytes(kubeConfigPath), StandardCharsets.UTF_8);
-        Config config = Config.fromKubeconfig(null, kubeconfigContents, kubeConfigFile.getPath());
+        KubeConfig kubernetesConfig = KubeConfig.loadKubeConfig(new StringReader(Files.readString(kubeConfigPath)));
 
-        return kubernetesConfigBuilder.masterUrl(config.getMasterUrl())
-            .username(getCharArray(config.getUsername()))
-            .password(getCharArray(config.getPassword()))
-            .caCert(getCharArray(config.getCaCertData()))
-            .clientCert(getCharArray(config.getClientCertData()))
-            .clientKey(getCharArray(config.getClientKeyData()))
-            .clientKeyPassphrase(getCharArray(config.getClientKeyPassphrase()))
-            .serviceAccountTokenSupplier(config.getOauthToken() != null ? config::getOauthToken : null)
-            .clientKeyAlgo(config.getClientKeyAlgo())
+        return kubernetesConfigBuilder.masterUrl(kubernetesConfig.getServer())
+            .username(getCharArray(kubernetesConfig.getUsername()))
+            .password(getCharArray(kubernetesConfig.getPassword()))
+            .caCert(getCharArray(kubernetesConfig.getCertificateAuthorityData()))
+            .clientCert(getCharArray(kubernetesConfig.getClientCertificateData()))
+            .clientKey(getCharArray(kubernetesConfig.getClientKeyData()))
+            .clientKeyPassphrase(getCharArray(KubeConfigConstants.DEFAULT_CLIENT_KEY_PASSPHRASE))
+            .serviceAccountTokenSupplier(
+                () -> kubernetesConfig.getCredentials().getOrDefault(KubeConfigConstants.TOKEN_KEY, null))
+            .clientKeyAlgo(getKeyAlgorithm(kubernetesConfig.getClientKeyFile(), kubernetesConfig.getClientKeyData()))
             .build();
       } catch (IOException e) {
         log.error("Could not load Kubernetes config file from {}", kubeConfigFile.getPath(), e);
@@ -562,7 +531,7 @@ public class KubernetesHelperService {
   }
 
   public static boolean isRunningInCluster() {
-    return Utils.getSystemPropertyOrEnvVar("KUBERNETES_SERVICE_HOST", (String) null) != null;
+    return getSystemPropertyOrEnvVar(KubeConfigConstants.KUBERNETES_SERVICE_HOST_PROPERTY, null) != null;
   }
 
   private static String getFileContent(String filename) {
@@ -574,5 +543,63 @@ public class KubernetesHelperService {
       noop(); // Ignore
     }
     return "";
+  }
+
+  private static String getKeyAlgorithm(String clientKeyFile, String clientKeyData) throws IOException {
+    InputStream keyInputStream = getInputStreamFromDataOrFile(clientKeyData, clientKeyFile);
+    if (keyInputStream != null) {
+      return getKeyAlgorithm(keyInputStream);
+    }
+    return KubeConfigConstants.DEFAULT_CLIENT_KEY_ALGORITHM;
+  }
+
+  private static String getKeyAlgorithm(InputStream inputStream) throws IOException {
+    BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(inputStream));
+    String algorithm = KubeConfigConstants.DEFAULT_CLIENT_KEY_ALGORITHM;
+    String line;
+    while ((line = bufferedReader.readLine()) != null) {
+      if (line.contains("BEGIN EC PRIVATE KEY")) {
+        algorithm = "EC";
+      } else if (line.contains("BEGIN RSA PRIVATE KEY")) {
+        algorithm = "RSA";
+      }
+    }
+    return algorithm;
+  }
+
+  private static ByteArrayInputStream getInputStreamFromDataOrFile(String data, String file) throws IOException {
+    if (data != null) {
+      byte[] bytes;
+      try {
+        bytes = Base64.getDecoder().decode(data);
+      } catch (Exception ex) {
+        bytes = data.getBytes();
+      }
+      return new ByteArrayInputStream(bytes);
+    } else {
+      return file != null
+          ? new ByteArrayInputStream((new String(Files.readAllBytes(Paths.get(file)))).trim().getBytes())
+          : null;
+    }
+  }
+
+  @VisibleForTesting
+  public static String getSystemPropertyOrEnvVar(String systemPropertyName, String defaultValue) {
+    return getSystemPropertyOrEnvVar(
+        systemPropertyName, convertSystemPropertyNameToEnvVar(systemPropertyName), defaultValue);
+  }
+
+  private static String convertSystemPropertyNameToEnvVar(String systemPropertyName) {
+    return systemPropertyName.toUpperCase(Locale.ROOT).replaceAll("[.-]", "_");
+  }
+
+  private static String getSystemPropertyOrEnvVar(String systemPropertyName, String envVarName, String defaultValue) {
+    String answer = System.getProperty(systemPropertyName);
+    if (isNotEmpty(answer)) {
+      return answer;
+    } else {
+      answer = System.getenv(envVarName);
+      return isNotEmpty(answer) ? answer : defaultValue;
+    }
   }
 }
